create web admin

--- a/angular.json
+++ b/angular.json
@@ -28,10 +28,20 @@
             "inlineStyleLanguage": "scss",
             "assets": [
               "src/favicon.ico",
-              "src/assets"
+              "src/assets",
+              {
+                "glob": "**/*",
+                "input": "./node_modules/@ant-design/icons-angular/src/inline-svg/",
+                "output": "/assets/"
+              }
             ],
             "styles": [
+              "./node_modules/font-awesome/css/font-awesome.min.css",
+              "./node_modules/@fortawesome/fontawesome-free/css/all.min.css",
+              "src/theme.less",
               "src/styles.scss"
+              
+              
             ],
             "scripts": []
           },
